# sg_repo

./: .README.md.swp  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
dags/: payments_etl.py
docs/decisions/: 0001-delta-over-iceberg.md  0002-merge-over-partition-overwrite.md  0003-airflow-over-dagster.md  0004-cost-tiers.md  0005-pushdown-rules.md
infra/terraform/: main.tf  monitoring.tf  security.tf
scripts/: seed_localstack.py
serverless/: ingest_handler.py  lean_transform.py
sql/ddl/: dim_game.sql  fact_payment_transaction.sql  silver_table_properties.sql
sql/marts/: agg_game_daily_revenue.sql  kpi_anomalies.sql  slo_views.sql
src/sg_payments/: __init__.py  alerts.py  bronze_to_silver.py  config.py  contracts.py  dq.py  ingest.py  joins.py  logging_setup.py  metrics.py  quarantine.py  retry_queue.py  schema_evolution.py  schema_gen.py  silver_to_gold.py  spark.py  streaming.py  volume_router.py  watermark.py
src/sg_payments/dq/: __init__.py  expectations.py  referential.py
tests/: test_contracts.py  test_dag_integrity.py  test_schema_evolution.py  test_schema_gen.py
