[project]
name = "sg-payments"
version = "0.1.0"
description = "Softgames payment provider ETL — S3, PySpark, Delta, Airflow"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "requests>=2.32",
    "tenacity>=8.2",
    "boto3>=1.34",
    "pyspark>=3.5",
    "delta-spark>=3.1",
    "great-expectations>=0.18",
    "apache-airflow>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "chispa>=0.10", "ruff>=0.4", "black>=24", "mypy>=1.10", "pre-commit>=3.7"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
